--- a/chrony.conf
+++ b/chrony.conf
@@ -15,3 +15,9 @@ spec:
         mode: 0644
         path: /etc/chrony.conf
         overwrite: true
+
+        
+server time.local iburst
+driftfile /var/lib/chrony/drift
+makestep 1.0 3
+rtcsync
