--- a/NFS/provisioner_class.yaml
+++ b/NFS/provisioner_class.yaml
@@ -2,9 +2,9 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: nfs-lenovo-prometheus
-provisioner: <TU_WSTAW_PROVISIONER_NAME_Z_OPERATORA>
-parameters:
-  archiveOnDelete: "false"
+provisioner: lenovo.nfs        # ⬅️ NAZWA Z POLA provisionerName
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
+parameters:
+  archiveOnDelete: "false"
